content grid styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,20 +51,42 @@ header nav ul li a {
     display: block;
     text-align: right;
     width: 100%;
-    padding: 100px 20px 0 0;
+    padding: 100px 80px 0 0;
 }
 .hero p {
     display: block;
     width: 100%;
     text-align: right;
-    padding: 0 20px 0 0;
+    padding: 0 80px 0 0;
 }
 .hero img {
     width: 222px;
     height: 222px;
 }
 /* Hero Style End */
+
 /* Content Style Start */
+.content-grid-container {
+    padding: 25px 35px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(3, 2fr) 1fr;
+}
+.content-header {
+    font-family: 'Courier New', Courier, monospace;
+    border-right: 3px solid navy;
+    grid-column-start: 1;
+}
+.content-item {
+    padding: 25px 35px;
+    font-family: 'Courier New', Courier, monospace;
+}
+.content-item.about-calista {
+    grid-row: 1 / span 1;
+}
+.content-item.work-portfolio {
+    grid-row: 2 / span 2;
+}
 .content {
     display: flex;
 }
